[gd_scene load_steps=2 format=3 uid="uid://irred3fcix4h"]

[ext_resource type="Script" path="res://hud.gd" id="1_8m6mq"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_8m6mq")

[node name="ScoreLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 88.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "0"

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -234.5
offset_top = -44.0
offset_right = 234.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "Infinite Runner"
horizontal_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -79.0
offset_top = -180.0
offset_right = 79.0
offset_bottom = -84.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="HealthLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "Health: 5"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
